logs/djapian.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Djapian-2.3.egg-info'...
Listing './lib/python3.5/site-packages/djapian'...
Compiling './lib/python3.5/site-packages/djapian/indexer.py'...
***   File "./lib/python3.5/site-packages/djapian/indexer.py", line 268
    except (IOError, RuntimeError, xapian.DocNotFoundError), e:
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djapian/management'...
Listing './lib/python3.5/site-packages/djapian/management/commands'...
Compiling './lib/python3.5/site-packages/djapian/management/commands/index.py'...
***   File "./lib/python3.5/site-packages/djapian/management/commands/index.py", line 54
    print 'There are %d objects to update' % count
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/djapian/management/commands/indexshell.py'...
***   File "./lib/python3.5/site-packages/djapian/management/commands/indexshell.py", line 13
    print "No index selected"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djapian/tests'...
Listing './lib/python3.5/site-packages/djapian/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
